--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+out/
+.vs/
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -7,3 +9,4 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+*.ipch
