--- a/XLang/CMakeLists.txt
+++ b/XLang/CMakeLists.txt
@@ -4,5 +4,5 @@
 cmake_minimum_required (VERSION 3.8)
 
 # 将源代码添加到此项目的可执行文件。
-add_executable (XLang "VersionInfo.h" "XLang.cpp" "XLang.h" "Node.cpp" "Node.h" "Parser.h" "ParserManager.cpp" "ParserManager.h")
+add_executable (XLang "Application/VersionInfo.h" "Application/XLang.cpp" "Application/XLang.h" "Node/Node.cpp" "Node/Node.h" "ParserApi.h" "Parser/ParserManager.cpp" "Parser/ParserManager.h")
 # TODO: 如有需要，请添加测试并安装目标。
