Add Logo & Update #3

--- a/XLang/CMakeLists.txt
+++ b/XLang/CMakeLists.txt
@@ -3,7 +3,6 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-# 将源代码添加到此项目的可执行文件。
-
-add_executable (XLang "XLang.cpp" "XLang.h" "Node.cpp" "Node.h" "NodeApi.h" CrossLibrary.h CrossLibrary.cpp PluginManager.cpp PluginManager.h AppSettings.h)
+# 将源代码添加到此项目的可执行文件
+add_executable (XLang XLang.cpp XLang.h Node.cpp Node.h CrossLibrary.h CrossLibrary.cpp AppSettings.h NodeStack.cpp)
 # TODO: 如有需要，请添加测试并安装目标。
